# RCSB_UTILS_SEQALIGN HISTORY
  26-Oct-2020  - V0.10 Created module
  28-Oct-2020  - V0.11 Create pipeline workflow
  28-Oct-2020  - V0.12 Add result parser
   7-Nov-2020  - V0.13 Add methods to evaluate search results